--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ backdrop-filter: blur(5px);
 -webkit-backdrop-filter: blur(5px);
 border: 1px solid rgba(255, 255, 255, 0.3);
 }
-cardss{
+cards{
   display: flex;
   flex-wrap: wrap;
    margin:20px;
